--- a/p.htm
+++ b/p.htm
@@ -1,11 +1,25 @@
 <html>
 	<head>
+		<script src="p5.js"></script>
+		<script src="p5.sound.js"></script>
+		<script src="https://the-doughnut.github.io/webserver/assets/p5.sound.min.js"></script>
 		<style>
 			body {background-color: black;}
 			p{color: white;}
+			button{margin: 2px;}
 		</style>
 	</head>
-	<body>
-		<p>You have pressed 'P'</p>
+	<body onload="preload()">
+		<button onclick="firstButton()">2600 Hz</button>
+		<button onclick="secondButton()">Red Box</button><br>
+		<button onclick="usdtButton()">US Dial Tone</button>
+		<button onclick="ukdtButton()">UK Dial Tone</button>
+		<button onclick="jpdtButton()">JP Dial Tone</button><br>
+		<button onclick="usrbButton()">US Ringback</button>
+		<button onclick="ukrbButton()">UK Ringback</button>
+		<button onclick="jprbButton()">JP Ringback</button><br>
+		<button onclick="helpButton()">?</button>
+		<main></main>
+		<script src="p.js"></script>
 	</body>
 </html>
