--- a/e.htm
+++ b/e.htm
@@ -2,10 +2,10 @@
 	<head>
 		<style>
 			body {background-color: black;}
-			p{color: white;}
+			h1{color: white;}
 		</style>
 	</head>
 	<body>
-		<p>You have pressed 'E'</p>
+		<h1>E</h1>
 	</body>
 </html>
