--- a/i.htm
+++ b/i.htm
@@ -6,6 +6,10 @@
 		</style>
 	</head>
 	<body>
-		<p>You have pressed 'I'</p>
+		<body onload="vendor()">
+		<p id="vending"></p>
+		<p id="plu"></p>
+		<p id="ver"></p>
+	<script src="agent.js"></script>
 	</body>
 </html>
