--- a/p.htm
+++ b/p.htm
@@ -18,6 +18,7 @@
 		<button onclick="usrbButton()">US Ringback</button>
 		<button onclick="ukrbButton()">UK Ringback</button>
 		<button onclick="jprbButton()">JP Ringback</button><br>
+		<button onclick="stopSound()">Stop</button>
 		<button onclick="helpButton()">?</button>
 		<main></main>
 		<script src="p.js"></script>
