--- a/y.htm
+++ b/y.htm
@@ -1,11 +1,14 @@
 <html>
 	<head>
+		<script src="p5.js"></script>
+		<script src="p5.sound.js"></script>
+		<script src="https://the-doughnut.github.io/webserver/assets/p5.sound.min.js"></script>
 		<style>
 			body {background-color: black;}
 			p{color: white;}
 		</style>
 	</head>
 	<body>
-		<p>You have pressed 'Y'</p>
+		<script src="y.js"></script>
 	</body>
 </html>
