--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
 	<script src="https://the-doughnut.github.io/webserver/assets/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
-
+	<title>epic game</title>
   </head>
   <body>
   <center><h1>epic game</h1></center>
