--- a/w.htm
+++ b/w.htm
@@ -2,10 +2,10 @@
 	<head>
 		<style>
 			body {background-color: black;}
-			p{color: white;}
+			h1{color: white;}
 		</style>
 	</head>
 	<body>
-		<p>You have pressed 'W'</p>
+		<h1>W</h1>
 	</body>
 </html>
